Add ways to get individual events by id
